Fixed small z-index issue.

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ a {
 
 .task-list {
   position: relative;
+  z-index: 5;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -90,6 +91,8 @@ a {
     transition: all 0.2s; }
 
 .new-task-list {
+  position: relative;
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,6 +113,7 @@ a {
 
 .new-task {
   position: relative;
+  z-index: 5;
   display: flex;
   align-items: center;
   min-height: 7.5rem;
@@ -205,6 +209,7 @@ a {
 
 .priority-menu {
   position: absolute;
+  z-index: 10;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
@@ -269,7 +274,7 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0.22;
+    opacity: 0.15;
     width: 100%;
     height: 100%; }
 
