--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,5 +1,6 @@
 .task-list {
   position: relative;
+  z-index: 5;
 
   display: flex;
   flex-direction: column;
@@ -65,6 +66,9 @@
 }
 
 .new-task-list {
+  position: relative;
+  z-index: 5;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -94,6 +98,7 @@
 
 .new-task {
   position: relative;
+  z-index: 5;
 
   display: flex;
   align-items: center;
@@ -233,6 +238,7 @@
 
 .priority-menu {
   position: absolute;
+  z-index: 10;
 
   display: grid;
   grid-template-rows: repeat(3, 1fr);
