--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -48,7 +48,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0.22;
+    opacity: 0.15;
     width: 100%;
     height: 100%;
   }
